src/test/deca/syntax/valid/test_if_then_else.deca
// Description:
//          Structure ifthenelse avec deux elseif
//
// Résultat:
//Succès
//
{
  int x = 1;
  if ( x == 0) {
      println(" x = 0");
  } else if ( x == 1) {
      println(" x = 1");
  } else if ( x == 2) {
      println(" x = 2");
  }else {
      println(" x >= 3");
  }
}
