src/test/deca/syntax/invalid/elseif_nonconditionnel.deca
//  Description :
//            Structure ifthenelse avec un else if sans condition
//
// Résultat:
//mismatched input '{' expecting '('
//
{
    if(bool){}
    else if {}
    else{}
}